# robotframework-project-template

./: .gitignore  LICENSE  README.md  UPGRADE_GUIDE.md  cursorreview.md  directorytree.md  pyproject.toml  robocop.toml  robot.toml
CustomLibraries/: customlibraries.md
CustomLibraries/CommonLibrary/: __init__.py  common_library.py
Data/: data.md
Data/ArgumentsFiles/: argumentsfiles.md
Data/ArgumentsFiles/Common/: ArgumentsTemplateFile.robot  CommonArguments.robot  DryRunProject.robot  PythonPathArguments.robot  RunAllExamples.robot
Data/Scripts/: verify_python_installation.bat
Resources/: resources.md
Resources/Common/: common.md
Resources/Common/Browser/: Browser.md  Browser.resource  BrowserConfiguration.yaml  BrowserUtilities.resource  BrowserUtilitiesPlugin.py  ManageBrowser.resource  browser_resource_version.py
Resources/Common/EnvironmentSetup/: LoadEnvironmentData.resource  environmentsetup.md
Resources/Common/RequestsLibrary/: GetSessionData.py  ManageRequestsLibrary.resource  RequestsContextUtility.py  RequestsLibrary.md  RequestsLibrary.resource  requests_resource_version.py  set_urllib3.py
Resources/Common/SUTSeleniumLibrary/: ManageSeleniumLibrary.resource  SeleniumLibrary.md  SeleniumLibrary.resource  SeleniumLibraryConfiguration.yaml  WaitForStablePlugin.py  selenium_library_resource_version.py
Resources/S1Platform/: s1platform.md
Resources/S1Platform/Common/: EnvironmentURL.yaml
Resources/S1Platform/REST/Common/: Session.resource
Resources/S1Platform/UI/: s1uicommon.md
Resources/S1Platform/UI/Common/: S1UrlMap.resource
Resources/SolutionOne/: solutionone.md
Resources/Utillities/: utilities.md
Results/: junit.xml  log.html  output.xml  playwright-log.txt  report.html
Results/01-clean-tests results/: junit.xml  log.html  output.xml  report.html
Results/02-variables-only results/: junit.xml  log.html  output.xml  report.html
Results/03-keyword-abstraction results/: junit.xml  log.html  output.xml  report.html
Results/04-resource-files results/: junit.xml  log.html  output.xml  report.html
Results/05-variables-yagni results/: junit.xml  log.html  output.xml  report.html
Results/06-2nd-abs-kw results/: junit.xml  log.html  output.xml  report.html
Results/main test results/: junit.xml  log.html  output.xml  report.html
Scripts/: verify_node_installation.py  verify_poetry_installation.py  verify_python_installation.ps1
Tasks/: tasks.md
Tests/: BrowserTest.robot  RequestsTest.robot  SeleniumTest.robot  tests.md
Tests/KeywordAcceptanceTests/: CommonLibraryTest.robot  expected_config.json  test_data.json
