

[project]
name = "robotframework-project-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Kelby Stine",email = "kelbystine@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
package-mode = false



[tool.poetry.group.test.dependencies]
robotframework = "^7.2.0"
robotframework-requests = "^0.9.7"
robotframework-seleniumlibrary = "^6.7.0"
robotframework-jsonlibrary = "^0.5"

[tool.poetry.group.framework.dependencies]

[tool.poetry.group.dev.dependencies]
robotframework-tidy = "^4.16.0"
robotframework-robocop = "^5.8.1"
robotcode-runner = "^0.108.0"

[tool.poetry.dependencies]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.common.dependencies]
lxml = "^5.3.0"
python-dotenv = "*"
oracledb = "^2.2.1"
PyJWT = "2.10.1"
pyyaml = "^6.0.2"
robotframework = "==6.1.1"
robotframework-crypto = "^0.3.0"
robotframework-databaselibrary = "==1.4.4"
robotframework-datadriver = "==1.11.2"
robotframework-jsonlibrary = "^0.5"
robotframework-requests = "==0.9.7"

[tool.poetry.group.browser.dependencies]
robotframework-browser = "==18.6.3"

[tool.poetry.group.dev.dependencies]
autopep8 = "*"
flake8 = "*"
pylint = "*"
robotcode-runner = "*"
robotframework-debug = "*"
robotframework-metrics = "*"
robotframework-robocop = "^5.4.0"
robotframework-tidy = "^4.14.0"

[tool.poetry.group.script.dependencies]
python-on-whales = "^0.72.0"

[tool.poetry.group.selenium.dependencies]
robotframework-seleniumlibrary = "==6.3.0"

[tool.poetry.group.test.dependencies]
openpyxl = "^3.1.5"
robotframework-excellib-xlsm = "^2.0.3"  # updated fork of robotframework-excellib
robotframework-imaplibrary2 = "^0.4.10"