[project]
name = "robotframework-project-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Kelby Stine",email = "kelbystine@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.browser.dependencies]
robotframework-browser = "^19.7.0"

[tool.poetry.group.common.dependencies]
lxml = "^6.0.0"
openpyxl = "^3.1.5"
python-dotenv = "^1.1.1"
PyJWT = "^2.10.1"
pyyaml = "^6.0.2"
robotframework-crypto = "^0.4.2"
robotframework-excellib-xlsm = "^2.0.3"  # updated fork of robotframework-excellib

[tool.poetry.group.dev.dependencies]
autopep8 = "*"
flake8 = "*"
pylint = "*"
robotframework-debug = "^4.5.0"
robotframework-metrics = "^3.7.0"

[tool.poetry.group.framework.dependencies]
robotcode-runner = "^1.6.0"
robotframework = "^7.3.2"
robotframework-datadriver = "^1.11.2"
robotframework-robocop = "^6.5.1"

[tool.poetry.group.script.dependencies]
python-on-whales = "^0.78.0"

[tool.poetry.group.selenium.dependencies]
selenium = "^4.34.2"
robotframework-seleniumlibrary = "^6.7.1"

[tool.poetry.group.database.dependencies]
oracledb = "^3.3.0"
robotframework-databaselibrary = "^2.1.4"

[tool.poetry.group.requests.dependencies]
robotframework-jsonlibrary = "^0.5"
robotframework-requests = "^0.9.7"
